--- a/app/src/main/res/layout/item_search_result_list.xml
+++ b/app/src/main/res/layout/item_search_result_list.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="@color/white"
+    android:layout_marginBottom="2dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -27,12 +28,15 @@
                 android:id="@+id/item_search_viewCount"
                 android:textStyle="bold"
                 android:gravity="left"
-                android:textSize="8.5sp"
+                android:textSize="10sp"
+                android:paddingLeft="5dp"
                 android:textColor="@color/grey_600"
                 android:text="View : 0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
                 android:id="@+id/item_search_dateTime"
                 android:textSize="9sp"
                 android:textColor="@color/grey_600"
@@ -44,7 +48,7 @@
             <TextView
                 android:singleLine="true"
                 android:ellipsize="end"
-                android:textSize="13sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:id="@+id/item_search_title"
@@ -53,6 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <RelativeLayout
+                android:layout_marginTop="9dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
